--- a/src/main/resources/templates/done.html
+++ b/src/main/resources/templates/done.html
@@ -6,7 +6,7 @@
     <body>
 
         <h1>Thank you! You have been signed up to the event!</h1>
-        <p>You can view your events <a th:href="@{/account/} + ${id}"> here </a> </p>
+        <p>You can view your events <a th:href="@{/account/} + ${username}"> here </a> </p>
 
     </body>
 </html>
